added style to header

--- a/index.html
+++ b/index.html
@@ -26,19 +26,23 @@
             and the color is lower
             contrast</p>
         <button class="mainBtn">Sign up</button>
-        <img alt="this is a placeholder for an image">
+        <div class='imgOne'>
+            <img alt="this is a placeholder for an image">
+        </div>
     </div>
-
+    <!-- 
     <div class="main-two">
         <h1 class="title-two"> Some random information</h1>
-        <img alt="image">
-        <div class="card">this is some subtext under an illustration or image</div>
-        <img alt="image">
-        <div class="card">this is some subtext under an illustration or image</div>
-        <img alt="image">
-        <div class="card">this is some subtext under an illustration or image</div>
-        <img alt="image">
-        <div class="card">this is some subtext under an illustration or image</div>
+        <div class="container">
+            <img alt="image">
+            <div class="card">this is some subtext under an illustration or image</div>
+            <img alt="image">
+            <div class="card">this is some subtext under an illustration or image</div>
+            <img alt="image">
+            <div class="card">this is some subtext under an illustration or image</div>
+            <img alt="image">
+            <div class="card">this is some subtext under an illustration or image</div>
+        </div>
     </div>
 
     <div class="main-three">
@@ -56,7 +60,7 @@
 
     <div class="footer">
         Copyright &#169 The Odin Project 2021
-    </div>
+    </div> -->
 </body>
 
 </html>
