added style to main-one div

--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
 
 
     <div class="main-one">
-        <h1 class="main-title">This website is awesome</h1>
-        <p class="main-subtext">This website has somesubtext that goes here under the main title .It's a smaller font
-            and the color is lower
-            contrast</p>
-        <button class="mainBtn">Sign up</button>
-        <div class='imgOne'>
-            <img alt="this is a placeholder for an image">
+        <div class="hero">
+            <h1 class="main-title">This website is awesome</h1>
+            <p class="main-subtext">This website has somesubtext that goes here under the main title. It's a smaller
+                font
+                and the color is lower
+                contrast</p>
+            <button class="mainBtn">Sign up</button>
+        </div>
+        <div class='imgContainer'>
+            <img src="https://images.unsplash.com/photo-1707058665477-560297ffe913?q=80&w=1032&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="NASA">
         </div>
     </div>
     <!-- 
