added styles to main-two

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="main-one">
         <div class="hero">
             <h1 class="main-title">This website is awesome</h1>
-            <p class="main-subtext">This website has somesubtext that goes here under the main title. It's a smaller
+            <p class="main-subtext">This website has some subtext that goes here under the main title. It's a smaller
                 font
                 and the color is lower
                 contrast</p>
@@ -34,20 +34,29 @@
                 alt="NASA">
         </div>
     </div>
-    <!-- 
+
     <div class="main-two">
         <h1 class="title-two"> Some random information</h1>
         <div class="container">
-            <img alt="image">
-            <div class="card">this is some subtext under an illustration or image</div>
-            <img alt="image">
-            <div class="card">this is some subtext under an illustration or image</div>
-            <img alt="image">
-            <div class="card">this is some subtext under an illustration or image</div>
-            <img alt="image">
-            <div class="card">this is some subtext under an illustration or image</div>
+            <div class="info">
+                <div class="box"></div>
+                <div class="card">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="box"></div>
+                <div class="card">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="box"></div>
+                <div class="card">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="box"></div>
+                <div class="card">this is some subtext under an illustration or image</div>
+            </div>
         </div>
     </div>
+
 
     <div class="main-three">
         <p class="text">This is an inspiring quote, or a testimonial from a customer. Maybe it'sjust filling up space or
@@ -56,6 +65,7 @@
         <p class="quote">-Thor , God of Thunder</p>
     </div>
 
+    <!-- 
     <div class="main-four">
         <h2 class="fourTitle">Call to action! It's time</h2>
         <p class="fourText">Sign up for our product by clicking that button right over there!</p>
