added style to quote section

--- a/index.html
+++ b/index.html
@@ -65,16 +65,17 @@
         <p class="quote">-Thor , God of Thunder</p>
     </div>
 
-    <!-- 
     <div class="main-four">
         <h2 class="fourTitle">Call to action! It's time</h2>
         <p class="fourText">Sign up for our product by clicking that button right over there!</p>
         <button class="fourBtn">Sign up</button>
     </div>
 
-    <div class="footer">
-        Copyright &#169 The Odin Project 2021
-    </div> -->
+    <footer>
+        <div class="footer">
+            Copyright &#169 The Odin Project 2021
+        </div>
+    </footer>
 </body>
 
 </html>
