--- a/index.html
+++ b/index.html
@@ -8,33 +8,35 @@
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            Header Logo
-        </div>
-        <div class="links">
-            <a>header link one</a>
-            <a>header link two</a>
-            <a>header link three</a>
-        </div>
-    </header>
+    <div class="hero">
+        <header>
+            <div class="logo">
+                Header Logo
+            </div>
+            <div class="links">
+                <a>header link one</a>
+                <a>header link two</a>
+                <a>header link three</a>
+            </div>
+        </header>
 
+        <div class="container">
+            <div class="main-one">
 
-    <div class="main-one">
-        <div class="hero">
-            <h1 class="main-title">This website is awesome</h1>
-            <p class="main-subtext">This website has some subtext that goes here under the main title. It's a smaller
-                font
-                and the color is lower
-                contrast</p>
-            <button class="mainBtn">Sign up</button>
-        </div>
-        <div class='imgContainer'>
-            <img src="https://images.unsplash.com/photo-1707058665477-560297ffe913?q=80&w=1032&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                alt="NASA">
+                <h1 class="main-text">This website is awesome</h1>
+                <p class="main-subtext">This website has some subtext that goes here under the main title. It's a
+                    smaller
+                    font
+                    and the color is lower
+                    contrast</p>
+                <button class="mainBtn">Sign up</button>
+            </div>
+            <div class='imgContainer'>
+                <img src="https://images.unsplash.com/photo-1707058665477-560297ffe913?q=80&w=1032&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt="NASA">
+            </div>
         </div>
     </div>
-
     <div class="main-two">
         <h1 class="title-two"> Some random information</h1>
         <div class="container">
