styling hero container section redo

--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
             </div>
         </header>
 
-        <div class="container">
-            <div class="main-one">
-
+        <div class="main-one">
+            <div>
                 <h1 class="main-text">This website is awesome</h1>
                 <p class="main-subtext">This website has some subtext that goes here under the main title. It's a
                     smaller
@@ -31,53 +30,58 @@
                     contrast</p>
                 <button class="mainBtn">Sign up</button>
             </div>
+
+
+
             <div class='imgContainer'>
                 <img src="https://images.unsplash.com/photo-1707058665477-560297ffe913?q=80&w=1032&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                     alt="NASA">
             </div>
+
+
         </div>
-    </div>
-    <div class="main-two">
-        <h1 class="title-two"> Some random information</h1>
-        <div class="container">
-            <div class="info">
-                <div class="box"></div>
-                <div class="card">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="info">
-                <div class="box"></div>
-                <div class="card">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="info">
-                <div class="box"></div>
-                <div class="card">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="info">
-                <div class="box"></div>
-                <div class="card">this is some subtext under an illustration or image</div>
+        <div class="main-two">
+            <h1 class="title-two"> Some random information</h1>
+            <div class="container">
+                <div class="info">
+                    <div class="box"></div>
+                    <div class="card">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <div class="box"></div>
+                    <div class="card">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <div class="box"></div>
+                    <div class="card">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <div class="box"></div>
+                    <div class="card">this is some subtext under an illustration or image</div>
+                </div>
             </div>
         </div>
-    </div>
 
 
-    <div class="main-three">
-        <p class="text">This is an inspiring quote, or a testimonial from a customer. Maybe it'sjust filling up space or
-            maybe people
-            will actually readit. Who knows? All I know is that it looks nice.</p>
-        <p class="quote">-Thor , God of Thunder</p>
-    </div>
-
-    <div class="main-four">
-        <h2 class="fourTitle">Call to action! It's time</h2>
-        <p class="fourText">Sign up for our product by clicking that button right over there!</p>
-        <button class="fourBtn">Sign up</button>
-    </div>
-
-    <footer>
-        <div class="footer">
-            Copyright &#169 The Odin Project 2021
+        <div class="main-three">
+            <p class="text">This is an inspiring quote, or a testimonial from a customer. Maybe it'sjust filling up
+                space or
+                maybe people
+                will actually readit. Who knows? All I know is that it looks nice.</p>
+            <p class="quote">-Thor , God of Thunder</p>
         </div>
-    </footer>
+
+        <div class="main-four">
+            <h2 class="fourTitle">Call to action! It's time</h2>
+            <p class="fourText">Sign up for our product by clicking that button right over there!</p>
+            <button class="fourBtn">Sign up</button>
+        </div>
+
+        <footer>
+            <div class="footer">
+                Copyright &#169 The Odin Project 2021
+            </div>
+        </footer>
 </body>
 
 </html>
