styled quote section redo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </header>
 
         <div class="main-one">
-            <div>
+            <div class="test">
                 <h1 class="main-text">This website is awesome</h1>
                 <p class="main-subtext">This website has some subtext that goes here under the main title. It's a
                     smaller
@@ -30,9 +30,6 @@
                     contrast</p>
                 <button class="mainBtn">Sign up</button>
             </div>
-
-
-
             <div class='imgContainer'>
                 <img src="https://images.unsplash.com/photo-1707058665477-560297ffe913?q=80&w=1032&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                     alt="NASA">
@@ -41,7 +38,7 @@
 
         </div>
         <div class="main-two">
-            <h1 class="title-two"> Some random information</h1>
+            <h1 class="title-two"> Some random information.</h1>
             <div class="container">
                 <div class="info">
                     <div class="box"></div>
